[package]
name = "rust_eden"
version = "0.1.0"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.33"
js-sys = "0.3.10"
reqwest = "0.9.8"
libflate = "0.1.19"

[dependencies.web-sys]
version = "0.3.10"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]